# actix-auth

./: .env  Cargo.toml  README.md  sailfish.yml
.github/workflows/: rust.yml
src/: config.rs  handlers.rs  main.rs
src/database/: mod.rs  user.rs
src/models/: mod.rs  user.rs
src/views/: login.html  user.stpl
