[package]
name = "actix-auth"
version = "0.1.0"
authors = ["Jonathan Woollett-Light <jonathanwoollettlight@gmai.com>"]
edition = "2018"

description = "A truly simple illustration of authorisation using actix-web."
license = "Apache-2.0"

repository = "https://github.com/JonathanWoollett-Light/actix-auth"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# general
actix-rt="1.1.1"
actix-web="3.3.2"
serde = { version="1.0.118", features=["derive"] }

# templating
sailfish = {version="0.3.0", features=["derive"]}
sailfish-macros = "0.3.0"

# setup
dotenv = "0.15.0"
config = "0.10.1"

# database
mongodb = "1.1.1"
bson = "1.1.0"
futures = "0.3.8"

# auth
rust-argon2="0.8" 
actix-identity = "0.3"
time = "0.2"
serde_json = "1.0"
rand = "0.8.3"